AWS Secrets Manager Changes

--- a/autospec-common/src/main/resources/application.properties
+++ b/autospec-common/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=autospec-common
+
+# AWS Secrets Manager Credentials
+aws.accessKey=YOUR_ACCESS_KEY
+aws.secretKey=YOUR_SECRET_KEY
