--- a/autospec-common/pom.xml
+++ b/autospec-common/pom.xml
@@ -31,6 +31,21 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- AWS Secrets Manager SDK -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>secretsmanager</artifactId>
+			<version>2.25.11</version>
+		</dependency>
+
+		<!-- AWS Regions (includes Region, credentials, etc.) -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>regions</artifactId>
+			<version>2.25.11</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
