--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 	<!-- Java Version -->
 	<properties>
 		<java.version>17</java.version>
+		<mapstruct.version>1.5.5.Final</mapstruct.version>
 	</properties>
 
 	<modules>
@@ -44,7 +45,21 @@
 				<version>1.18.28</version>
 				<optional>true</optional>
 			</dependency>
-	    </dependencies>
+
+			<!-- MapStruct version control -->
+			<dependency>
+				<groupId>org.mapstruct</groupId>
+				<artifactId>mapstruct</artifactId>
+				<version>${mapstruct.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mapstruct</groupId>
+				<artifactId>mapstruct-processor</artifactId>
+				<version>${mapstruct.version}</version>
+			</dependency>
+
+
+		</dependencies>
   	</dependencyManagement>
 
 </project>
