--- a/autospec-app/src/main/resources/application.properties
+++ b/autospec-app/src/main/resources/application.properties
@@ -14,3 +14,6 @@ openrouter.api.model.name=google/gemma-3-4b-it:free
 openrouter.api.image.model.name=x-ai/grok-4-fast:free           # LLM for Image based attribute extraction
 openrouter.http.timeout.ms=60000
 
+# load your static YAML in Swagger UI
+springdoc.swagger-ui.url=/openapi.yaml
+
