--- a/autospec-app/pom.xml
+++ b/autospec-app/pom.xml
@@ -62,6 +62,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- OpenAPI/Swagger UI -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
