Removing Credentials and adding them to a secrets file, not part of the repo

--- a/autospec-app/src/main/resources/application.properties
+++ b/autospec-app/src/main/resources/application.properties
@@ -5,10 +5,12 @@ server.port=8088
 #Mongo DB Cloud Atlas
 #spring.data.mongodb.uri=mongodb+srv://mongoDbUser:ADKSB1XV55jagq8i@cluster0.lmhmxb5.mongodb.net/autospec_db?retryWrites=true&w=majority&appName=Cluster0
 #Mongo DB Local
+# Refer to application-secrets.properties for ${MONGO_URI}
 spring.data.mongodb.uri=${MONGO_URI}
 
 ## Open Router Configurations
 openrouter.api.url=https://openrouter.ai/api/v1/chat/completions
+# Refer to application-secrets.properties for ${OPENROUTER_API_KEY}
 openrouter.api.key=${OPENROUTER_API_KEY}
 openrouter.api.model.name=google/gemma-3-4b-it:free
 openrouter.api.image.model.name=x-ai/grok-4-fast:free           # LLM for Image based attribute extraction
